# play-with-rust-binding

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  rust-src-install.sh
binding/js/: Cargo.toml  Dockerfile  browser.js  node.js  package-lock.json  package.json  webpack.config.cjs
binding/js/src/: lib.rs
binding/php/: Cargo.toml  Dockerfile  php-development.ini  run.php
binding/php/src/: lib.rs
binding/python/: Cargo.toml  Dockerfile  pyproject.toml  requirements-dev.txt  run.py
binding/python/src/: lib.rs
binding/ruby/: Cargo.toml  Dockerfile  Gemfile  Rakefile  ruby_binding.gemspec
binding/ruby/lib/: ruby_binding.rb
binding/ruby/lib/ruby_binding/: version.rb
binding/ruby/src/: lib.rs
binding/ruby/test/: ruby_binding_test.rb  test_helper.rb
shared/: mod.rs
src/: main.rs
