[package]
name = "php_binding"
version = "0.1.0"
authors = ["subuta <shunta.3110@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "*"

[lib]
name = "php_binding"
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"